...
                android:adjustViewBounds="true"
                android:contentDescription="@string/optional_user_uploaded_image"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/itemDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/item_details"
                android:textAlignment="center"
...
            android:backgroundTint="@color/button_back"
            android:text="@string/back_button"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_save"
            android:text="@string/edit_button"
...
